--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ android {
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -20,7 +21,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.0'
+    compile 'com.android.support:cardview-v7:27.0.2'
     compile 'com.android.support:design:27.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     testImplementation 'junit:junit:4.12'
@@ -39,12 +40,14 @@ dependencies {
     compile 'com.mobsandgeeks:android-saripaar:2.0.3'
     compile 'com.kaopiz:kprogresshud:1.1.0'
     compile 'com.makeramen:roundedimageview:2.3.0'
-    compile 'com.google.android.gms:play-services-ads:15.0.0'
-    compile 'com.google.firebase:firebase-messaging:15.0.0'
-    compile 'com.google.android.gms:play-services-analytics:15.0.0'
-    compile 'com.google.maps.android:android-maps-utils:0.5'
-    compile 'com.ss.bannerslider:bannerslider:1.8.0'
-    compile 'com.roughike:bottom-bar:2.3.1'
+
+    compile 'com.firebase:firebase-client-android:2.4.0'
+    compile 'com.google.android.gms:play-services-analytics:12.0.1'
+    compile 'com.google.firebase:firebase-core:12.0.1'
+    compile 'com.google.firebase:firebase-database:12.0.1'
+    compile 'com.google.firebase:firebase-messaging:12.0.1'
+    compile 'com.google.android.gms:play-services-ads:12.0.1'
+
     compile 'hyogeun.github.com.colorratingbar:ColorRatingBar:1.0.1'
     compile 'de.hdodenhof:circleimageview:2.2.0'
     compile 'com.squareup.dagger:dagger:1.2.2'
